# server.js
@@ -10,8 +10,10 @@ app.use(express.json());
 const setupSwagger = require('./swagger'); 
 setupSwagger(app); 
 
+app.use('/auth', require('./routes/auth'));
 app.use('/pokemons', require('./routes/pokemons'));
 app.use('/moves', require('./routes/moves'));
+
 
 const port = process.env.PORT || 8080;
 
